GT-5: added FlightFilter tests and minor fixes